--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,16 @@
 # Code::Blocks generated debug and release directories
 debug/
 release/
+Unidad -1 (Nivelacion)/Unidad -1 (Nivelacion).cbp
+CppProperties.json
+.vscode/launch.json
+.vscode/c_cpp_properties.json
+.vs/VSWorkspaceState.json
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
+.vs/AYED---UNLA/v17/ipch/AutoPCH/d1776e1fce7b58e5/MAIN.ipch
+.vs/AYED---UNLA/v17/ipch/AutoPCH/43927952ac9fc2eb/CARTON.ipch
+.vs/AYED---UNLA/v17/Browse.VC.db
+.vs/AYED---UNLA/v17/.wsuo
+.vs/AYED---UNLA/FileContentIndex/f2e7c3bf-eef0-402c-9104-b6ba82355075.vsidx
+.vs/AYED---UNLA/FileContentIndex/25c00050-480e-4a05-ae46-5077da18eb96.vsidx
